Prevent clipping of circle

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -1601,7 +1601,7 @@ div.v-subheader {
  border-radius:50%;
  margin-top:4px;
  margin-bottom:4px;
- margin-left:0px;
+ margin-left:2px;
  margin-right:12px;
 }
 
